# pycounts_sq

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_sq/: __init__.py
tests/: einstein.txt  test_pycounts_sq.py
